Hot fix text align

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
   font-size: 3rem;
   top: 65%;
   text-align: center;
+  width: 100%;
 }
 
 * {
